<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ChangeColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="@dimen/padding"
        android:text="@string/select_color_prompt" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="@dimen/padding">

        <RadioButton
            android:id="@+id/radio_btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/radio_btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/radio_btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />
    </RadioGroup>


    <Button
        android:id="@+id/btn_change_color_submit_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_changes" />

</android.support.v7.widget.LinearLayoutCompat>